@@ -10,8 +10,8 @@
 	<exclude-pattern>*\.(?!php$)</exclude-pattern>
 
 	<!-- Configs -->
-	<config name="minimum_supported_wp_version" value="4.7" />
-	<config name="testVersion" value="5.6-" />
+	<config name="minimum_supported_wp_version" value="5.6" />
+	<config name="testVersion" value="7.0" />
 
 	<!-- Rules -->
 	<rule ref="WooCommerce-Core" >
